got date working

--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
     <h1>Events</h1>
 
     <form id="addEvent">
-        <label>
+        <!-- <label>
             ID #:
             <input name="id" type="text">
-        </label>
+        </label> -->
         <label>
             Event Name:
             <input name="name" type="text">
         </label>
         <label>
             Date:
-            <input name="date" type="text">
+            <input name="date" type="date">
         </label>
         <label>
             Location:
